buttons and styling

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,8 +4,18 @@
   box-sizing: border-box;
 }
 body {
-  background-color: black;
+  background-color: #222222;
   text-align: center;
+}
+
+#selected{
+  transform: scale(1.1);
+  background-color: #62a89f33;
+  border: 2px solid #62a89f;
+}
+
+#un{
+  border: 2px solid transparent;
 }
 .home-bar {
   height: 80px;
@@ -57,7 +67,7 @@ body {
 }
 .player-select {
   height: 500px;
-  margin: 5rem 20rem;
+  margin: 1rem 0 1rem 0;
   text-align: center;
   display: flex;
   flex-direction: row;
@@ -66,12 +76,13 @@ body {
   align-items: center;
 }
 .player-select-box {
+  cursor: pointer;
   height: 350px;
-  width: 30%;
-  border: solid #62a89f;
+  width: 250px;
   border-radius: 10px;
   position: relative;
-  background-color: #62a89f33;
+  background-color: rgb(15, 15, 15);
+  /* background-color: #1d1d1d; */
   transition: 0.5s ease-in-out;
 }
 
@@ -137,6 +148,7 @@ body {
   all: unset;
   background-color: transparent;
   cursor: pointer;
+  z-index: 999;
 }
 /* SVG gender styling */
 
@@ -252,4 +264,118 @@ body {
   stroke-dasharray: 79px;
   stroke-dashoffset: 79px;
   animation: stroke-anim 2s ease forwards 1s;
+}
+
+/* SVG end */
+.crypto-main{
+  margin-bottom: 60px;
+  display: flex;
+  justify-content: center;
+}
+.crypto-select{
+  border: 6px solid black;
+  background-color: black;
+  display: grid;
+  grid-gap: 10px 5px;
+  border-radius: 10px;
+}
+.crypto-button{
+  all: unset;
+  width: 85px;
+  font-size: 20px;
+  font-family: monospace;
+  height: 100px;
+  margin: auto;
+  background-color: #1d1d1d;
+  box-shadow: 0px 10px 8px 2px rgba(0, 0, 0, 0.5), inset 0px 3px 5px -3px rgba(255, 255, 255, 0.295);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  transition: 0.3s all;
+  cursor: pointer;
+}
+
+.crypto-logo{
+  margin-bottom: 5px;
+  font-size: 40px;
+}
+
+.button-press{
+  background-color: rgb(15, 15, 15);
+  color: #62a89f;
+  box-shadow: inset 0px 0px 5px 0px black;
+  text-shadow: #94fdef 0px 0 20px;
+}
+
+#grid-1{
+  grid-row-start: 1;
+  grid-row-end: 2;
+  grid-column-start: 1;
+  grid-column-end: 2;
+  border-radius: 10px 0 0 10px;
+}
+
+#grid-2{
+  grid-row-start: 1;
+  grid-row-end: 2;
+  grid-column-start: 2;
+  grid-column-end: 3;
+}
+
+#grid-3{
+  grid-row-start: 1;
+  grid-row-end: 2;
+  grid-column-start: 3;
+  grid-column-end: 4;
+}
+
+#grid-4{
+  grid-row-start: 1;
+  grid-row-end: 2;
+  grid-column-start: 4;
+  grid-column-end: 5;
+}
+
+#grid-5{
+  grid-row-start: 1;
+  grid-row-end: 2;
+  grid-column-start: 5;
+  grid-column-end: 6;
+}
+
+#grid-6{
+  grid-row-start: 1;
+  grid-row-end: 2;
+  grid-column-start: 6;
+  grid-column-end: 7;
+}
+
+#grid-7{
+  grid-row-start: 1;
+  grid-row-end: 2;
+  grid-column-start: 7;
+  grid-column-end: 8;
+}
+
+#grid-8{
+  grid-row-start: 1;
+  grid-row-end: 2;
+  grid-column-start: 8;
+  grid-column-end: 9;
+  
+}
+
+#grid-9{
+  grid-row-start: 1;
+  grid-row-end: 2;
+  grid-column-start: 9;
+  grid-column-end: 10;
+}
+
+#grid-10{
+  grid-row-start: 1;
+  grid-row-end: 2;
+  grid-column-start: 10;
+  grid-column-end: 11;
+  border-radius: 0 10px 10px 0;
 }
