--- a/frontend/src/components/charList.css
+++ b/frontend/src/components/charList.css
@@ -30,5 +30,5 @@
   border-radius: 10px;
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   background-color: transparent;
-  border: 1px solid #0d8f8f;
+  border: 1px solid #62a89f;
 }
