--- a/frontend/src/components/hungerbar.css
+++ b/frontend/src/components/hungerbar.css
@@ -2,5 +2,7 @@
     border-radius: 500px;
     overflow: hidden;
     box-shadow: inset 0 0 10px rgba(0, 0, 0, 1);
-    border: 1px solid #0d8f8f;
+    border: 1px solid #62a89f;
 }
+
+
