--- a/frontend/src/components/charDisplay.css
+++ b/frontend/src/components/charDisplay.css
@@ -10,8 +10,8 @@
   border-radius: 10px;
   display: grid;
   gap: 10px;
-  padding: 10px;
-  grid-template-columns: repeat(10, 10%);
+  padding: 15px;
+  grid-template-columns: repeat(10, 10.1%);
   grid-template-rows: repeat(4, 21%);
 }
 
@@ -66,7 +66,7 @@
   justify-content: center;
   align-items: center;
   color: #fff;
-  font-size: 20px;
+  font-size: 18px;
   border-radius: 10px;
   box-shadow: var(--soft);
 }
@@ -109,7 +109,7 @@
   justify-content: center;
   align-items: center;
   color: #fff;
-  font-size: 20px;
+  font-size: 18px;
   border-radius: 10px;
   box-shadow: var(--soft);
 }
@@ -174,6 +174,14 @@
 
 .health-stat-img {
   width: 40px;
+}
+
+.list-eat{
+  width: 40px;
+}
+
+.list-hosp{
+  width: 50px;
 }
 
 .chardisp-feed {
