--- a/frontend/src/components/charList.css
+++ b/frontend/src/components/charList.css
@@ -1,18 +1,87 @@
+:root{
+  --soft: inset 5px 5px 10px #0e0e0e, inset -10px -10px 10px #252525;
+}
+
 .list-main {
-  width: 90vw;
+  width: 95vw;
   margin: 20px auto 20px auto;
-  height: 90vh;
-  border: 2px solid red;
+  height: 95vh;
   padding: 20px;
   display: grid;
-  grid-template-columns: auto;
+  grid-template-columns: auto auto;
   justify-content: space-around;
 }
 
+.sidebar-main{
+  color: white;
+  border-radius: 10px;
+  width: 175px;
+  height: 400px;
+  box-shadow: var(--soft);
+  padding: 15px;
+}
+
+.mating-main-button{
+  width: 100%;
+  border: 2px solid #62a89f;
+  border-radius: 10px;
+  margin-top: 20px;
+}
+
+.ration-main{
+  width: 100%;
+  display: grid;
+  grid-template-rows: auto auto;
+  border: 2px solid #62a89f;
+  border-radius: 10px;
+  padding-top: 20px;
+  padding-bottom: -10px;
+}
+
+.ration-icon{
+  grid-row-start: 1;
+  grid-row-end: 2;
+  grid-column-start: 1;
+  grid-column-end: 2;
+}
+
+.icon-image{
+  width: 50px;
+  height: 50px;
+}
+
+.ration-buy{
+  grid-row-start: 2;
+  grid-row-end: 3;
+  grid-column-start: 1;
+  grid-column-end: 3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+}
+
+.ration-amount{
+  grid-row-start: 1;
+  grid-row-end: 2;
+  grid-column-start: 2;
+  grid-column-end: 3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 25px;
+  font-family: monospace;
+  width: 65px;
+  height: 50px;
+  border: 2px solid red;
+}
+
 .list-child {
-  width: 80vw;
-  border: 2px solid;
+  width: 75vw;
+  /* border: 2px solid; */
+  border-radius: 10px;
   overflow: auto;
+  box-shadow: var(--soft);
 }
 
 .list-child::-webkit-scrollbar-track {
