Corrected background img position

--- a/frontend/src/components/AnimatedBg.css
+++ b/frontend/src/components/AnimatedBg.css
@@ -99,5 +99,7 @@
   position: absolute;
   z-index: 3;
   right: 20px;
-  top: 40px;
+  /* top: 40px; */
+  top: 50%;
+  transform: translateY(-50%);
 }
