--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -22,6 +22,10 @@
 .navbar > .navbar-items > span {
     padding: 0 0 0 0.5rem;
 }
+.navbar > .navbar-items > span > a {
+    text-decoration: none;
+    color: white;
+}
 .navbar > .navbar-items > span:first-child {
     padding: 0;
 }
