--- a/frontend/src/components/MatingCharCard.css
+++ b/frontend/src/components/MatingCharCard.css
@@ -8,7 +8,13 @@
   height: fit-content;
   border-radius: 10px;
   border: 2px solid #62a89f;
+  transition: 0.4s;
   /* box-shadow: var(--soft); */
+}
+
+.mating-char-item:hover{
+  background-color: #62a89f3a;
+
 }
 
 .MatingCharCard-name {
@@ -23,4 +29,5 @@
 
 .MatingCharCard-heart {
   width: 25px;
+  margin: 2px;
 }
