--- a/frontend/src/components/customButton.css
+++ b/frontend/src/components/customButton.css
@@ -2,7 +2,9 @@
     all: unset;
     border: 2px solid #62a89f;
     padding: 10px;
-    font-size: 1em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     color: white;
     border-radius: 10px;
     transition: 0.5s;
