--- a/frontend/src/components/Wallet.css
+++ b/frontend/src/components/Wallet.css
@@ -11,29 +11,39 @@
 }
 
 .grid-item {
-  border: 2px solid #62a89f85;
+  /* border: 2px solid #62a89f85; */
   height: 600px;
 }
 
 .wallet-chars {
   margin: 0 3rem;
   margin-top: 6rem;
-
   display: grid;
   padding: 20px 50px 20px 50px;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
   grid-gap: 40px;
   overflow: auto;
+  box-shadow: var(--soft);
+  border-radius: 20px;
 }
 
-.wallet-area {
-  height: 300px;
-  display: grid;
-  grid-template-columns: 2fr 1fr 2fr;
-  margin-top: 30%;
-  padding: 0px 50px;
-  border: 2px solid #62a89f85;
+.wallet-chars::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  background-color: transparent;
+}
+
+.wallet-chars::-webkit-scrollbar {
+  width: 10px;
+  background-color: transparent;
+}
+
+.wallet-chars::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: transparent;
+  border: 1px solid #62a89f;
 }
 
 .wallet-final {
@@ -54,15 +64,10 @@
   margin-top: 30%;
 }
 
-.wallet-product {
-  border-radius: 10px;
-  box-shadow: var(--soft);
-  width: 200px;
-  position: relative;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
 .walletCharCard-button {
   margin-top: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px 0 5px 0;
 }
