--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -15,6 +15,13 @@
 }
 .navbar > .navbar-logo {
     font-weight: lighter;
+    font-family: var(--mmd);
+    text-transform: lowercase;
+    font-size: 20px;
+}
+.navbar > .navbar-logo > span > a{
+    text-decoration: none;
+    color: white;
 }
 .navbar > .navbar-logo::first-letter {
     font-weight: 900;
